# kodos

./: .gitignore  CHANGELOG.txt  COPYRIGHT.txt  MANIFEST.in  Makefile  PKG-INFO  README.txt  __init__.py  kodos  kodos.desktop  kodos.pro  kodos.py  kodos.qrc  kodosqt.pro  py2exe-setup.py  setup.cfg  setup.py
help/: examine.html  example.html  importURL.html  kodos.html  mainwin.html  overview.html  pause.html  prefs.html  regex-lib.xml  running.html  toolbar.html
help/python/: about.html  module-re.html  (+6 more)
kodos/: Makefile  about.py  aboutBA.ui  debug.py  help.py  helpBA.ui  kodosBA.ui  main.py  newUserDialogBA.ui  parseRegexLib.py  prefs.py  prefsBA.ui  recent_files.py  reference.py  referenceBA.ui  regexLibrary.py  regexLibraryBA.ui  status_bar.py  tooltip.py  urlDialog.py  urlDialogBA.ui  util.py  version.py
modules/: .gitignore  Makefile  TimeoutError.py  __init__.py  about.py  aboutBA.py  aboutBA.ui  debug.py  flags.py  help.py  helpBA.py  helpBA.ui  kodosBA.py  kodosBA.ui  kodos_rc.py  migrate_settings.py  newUserDialog.py  newUserDialogBA.py  newUserDialogBA.ui  parseRegexLib.py  prefs.py  prefsBA.py  prefsBA.ui  quickhelperBA.py  recent_files.py  reference.py  referenceBA.py  referenceBA.ui  regexBA.py  regexLibrary.py  regexLibraryBA.py  regexLibraryBA.ui  reportBug.py  reportBugBA.py  reportBugBA.ui  resultsBA.py  resultsBA.ui  status_bar.py  stringBA.py  tooltip.py  (+6 more)
packaging/: CMakeLists.txt  get-os.sh  kodos.desktop  kodos.spec  postinst  prerm
scripts/: README  bapro2qtpro.py  pyuicfix.py
translations/: Makefile  kodos_en.ts  kodos_pl.qm  kodos_pl.ts
